--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>picture_cms</title>
+    <base target="_blank" />
   </head>
   <body>
     <div id="app"></div>
